--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/style/style.css">
   </head>
   <body>
-    <div class="rgt-container">123</div>
+    <div class="rgt-container"></div>
   </body>
   <script src="/bundle.js"></script>
 </html>
